--- a/layout.html
+++ b/layout.html
@@ -296,7 +296,7 @@
                                             <div class="single-image-carousel">
                                                 <div class="carousel-item">
                                                     <div class="image-wrapper">
-                                                            <img src="assets/images/1.png" alt="1">
+                                                            <img src="assets/images/1.png" alt="1" width="50px">
                                                             <p class="has-text-centered">
                                                                     <a href="#" class="button button-cta btn-align primary-btn rounded z-index-2">
                                                                         <i class="material-icons">file_download</i>
