--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bulkit - Agency, Startup and SaaS template</title>
-        <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+        <title>Team Jeunesse Update</title>
+        <link rel="icon" type="image/png" href="assets/images/logos/team-jeunesse.png" />
         <!-- Core css -->
         <link rel="stylesheet" id="bulma" href="assets/css/bulma.css" />
         <link rel="stylesheet" type="text/css" href="assets/css/core_demo.css">
@@ -32,8 +32,8 @@
                         <nav class="nav">
                             <div class="container big">
                                 <div class="nav-left">
-                                    <a class="nav-item" href="index.html">
-                                        <img src="assets/images/logos/bulkit-logo.png" alt="">
+                                    <a class="nav-item" href="layout.html">
+                                        <img src="assets/images/logos/team-jeunesse.png"  alt="">
                                     </a>
                                     <!-- Sidebar trigger -->
                                     <a id="navigation-trigger" class="nav-item hamburger-btn" href="javascript:void(0);">
@@ -75,7 +75,7 @@
                                         Login
                                     </a>
                                     <span class="nav-item">
-                                        <a id="#signup-btn" href="instantlyageless.html" class="button button-signup btn-outlined is-bold btn-align secondary-btn rounded">
+                                        <a id="#signup-btn" href="layout.html" class="button button-signup btn-outlined is-bold btn-align secondary-btn rounded">
                                             Sign up
                                         </a>
                                     </span>
